site/manual/4.01/profil.md
<!-- ((! set title Manual !)) ((! set documentation !)) ((! set manual !)) ((! set nobreadcrumb !)) -->
<div class="manual content"><ul class="part_menu"><li><a href="comp.html">Batch compilation (ocamlc)</a></li><li><a href="toplevel.html">The toplevel system (ocaml)</a></li><li><a href="runtime.html">The runtime system (ocamlrun)</a></li><li><a href="native.html">Native-code compilation (ocamlopt)</a></li><li><a href="lexyacc.html">Lexer and parser generators (ocamllex, ocamlyacc)</a></li><li><a href="depend.html">Dependency generator (ocamldep)</a></li><li><a href="browser.html">The browser/editor (ocamlbrowser)</a></li><li><a href="ocamldoc.html">The documentation generator (ocamldoc)</a></li><li><a href="debugger.html">The debugger (ocamldebug)</a></li><li class="active"><a href="profil.html">Profiling (ocamlprof)</a></li><li><a href="ocamlbuild.html">The ocamlbuild compilation manager</a></li><li><a href="intfc.html">Interfacing C with OCaml</a></li></ul>




<h1 class="chapter" id="sec361"><span>Chapter 17</span>&nbsp;&nbsp;Profiling (ocamlprof)</h1>
<header><nav class="toc brand"><a class="brand" href="https://ocaml.org/"><img src="colour-logo-gray.svg" class="svg" alt="OCaml"></a></nav><nav class="toc"><div class="toc_version"><a href="/docs" id="version-select">Version 4.01</a></div><div class="toc_title"><a href="#">Profiling (ocamlprof)</a></div><ul><li class="top"><a href="#">Top</a></li>
<li><a href="profil.html#sec362">Compiling for profiling</a>
</li><li><a href="profil.html#sec366">Profiling an execution</a>
</li><li><a href="profil.html#sec367">Printing profiling information</a>
</li><li><a href="profil.html#sec368">Time profiling</a>
</li></ul></nav></header>
<p> <a id="c:profiler"></a>

</p><p>This chapter describes how the execution of OCaml
programs can be profiled, by recording how many times functions are
called, branches of conditionals are taken, …</p>
<h2 class="section" id="sec362">1&nbsp;&nbsp;Compiling for profiling</h2>
<p>Before profiling an execution, the program must be compiled in
profiling mode, using the <span class="c007">ocamlcp</span> front-end to the <span class="c007">ocamlc</span> compiler
(see chapter&nbsp;<a href="comp.html#c%3Acamlc">8</a>) or the <span class="c007">ocamloptp</span> front-end to the
<span class="c007">ocamlopt</span> compiler (see chapter&nbsp;<a href="native.html#c%3Anativecomp">11</a>). When compiling
modules separately, <span class="c007">ocamlcp</span> or <span class="c007">ocamloptp</span> must be used when
compiling the modules (production of <span class="c007">.cmo</span> or <span class="c007">.cmx</span> files), and can
also be used (though this is not strictly necessary) when linking them
together.</p>
<h5 class="paragraph" id="sec363">Note</h5>
<p> If a module (<span class="c007">.ml</span> file) doesn’t have a corresponding
interface (<span class="c007">.mli</span> file), then compiling it with <span class="c007">ocamlcp</span> will produce
object files (<span class="c007">.cmi</span> and <span class="c007">.cmo</span>) that are not compatible with the ones
produced by <span class="c007">ocamlc</span>, which may lead to problems (if the <span class="c007">.cmi</span> or
<span class="c007">.cmo</span> is still around) when switching between profiling and
non-profiling compilations. To avoid this problem, you should always
have a <span class="c007">.mli</span> file for each <span class="c007">.ml</span> file. The same problem exists with
<span class="c007">ocamloptp</span>.</p>
<h5 class="paragraph" id="sec364">Note</h5>
<p> To make sure your programs can be compiled in
profiling mode, avoid using any identifier that begins with
<span class="c007">__ocaml_prof</span>.</p><p>The amount of profiling information can be controlled through the <span class="c007">-P</span>
option to <span class="c007">ocamlcp</span> or <span class="c007">ocamloptp</span>, followed by one or several letters
indicating which parts of the program should be profiled:</p><dl class="description"><dt class="dt-description">
<span class="c010">a</span></dt><dd class="dd-description"> all options
</dd><dt class="dt-description"><span class="c010">f</span></dt><dd class="dd-description"> function calls : a count point is set at the beginning of
each function body
</dd><dt class="dt-description"><span class="c010">i</span></dt><dd class="dd-description"> <span class="c019">if …then …else …</span> : count points are set in
both <span class="c019">then</span> branch and <span class="c019">else</span> branch
</dd><dt class="dt-description"><span class="c010">l</span></dt><dd class="dd-description"> <span class="c019">while, for</span> loops: a count point is set at the beginning of
the loop body
</dd><dt class="dt-description"><span class="c010">m</span></dt><dd class="dd-description"> <span class="c019">match</span> branches: a count point is set at the beginning of the
body of each branch
</dd><dt class="dt-description"><span class="c010">t</span></dt><dd class="dd-description"> <span class="c019">try …with …</span> branches: a count point is set at the
beginning of the body of each branch
</dd></dl><p>For instance, compiling with <span class="c007">ocamlcp -P film</span> profiles function calls,
if…then…else…, loops and pattern matching.</p><p>Calling <span class="c007">ocamlcp</span> or <span class="c007">ocamloptp</span> without the <span class="c007">-P</span> option defaults to
<span class="c007">-P fm</span>, meaning that only function calls and pattern matching are
profiled.</p>
<h5 class="paragraph" id="sec365">Note</h5>
<p> For compatibility with previous releases, <span class="c007">ocamlcp</span>
also accepts the <span class="c007">-p</span> option, with the same arguments and behaviour as
<span class="c007">-P</span>.</p><p>The <span class="c007">ocamlcp</span> and <span class="c007">ocamloptp</span> commands also accept all the options of
the corresponding <span class="c007">ocamlc</span> or <span class="c007">ocamlopt</span> compiler, except the <span class="c007">-pp</span>
(preprocessing) option.</p>
<h2 class="section" id="sec366">2&nbsp;&nbsp;Profiling an execution</h2>
<p>Running an executable that has been compiled with <span class="c007">ocamlcp</span> or
<span class="c007">ocamloptp</span> records the execution counts for the specified parts of
the program and saves them in a file called <span class="c007">ocamlprof.dump</span> in the
current directory.</p><p>If the environment variable <span class="c007">OCAMLPROF_DUMP</span> is set when the program
exits, its value is used as the file name instead of <span class="c007">ocamlprof.dump</span>.</p><p>The dump file is written only if the program terminates
normally (by calling <span class="c007">exit</span> or by falling through). It is not written
if the program terminates with an uncaught exception.</p><p>If a compatible dump file already exists in the current directory, then the
profiling information is accumulated in this dump file. This allows, for
instance, the profiling of several executions of a program on
different inputs. Note that dump files produced by byte-code
executables (compiled with <span class="c007">ocamlcp</span>) are compatible with the dump
files produced by native executables (compiled with <span class="c007">ocamloptp</span>).</p>
<h2 class="section" id="sec367">3&nbsp;&nbsp;Printing profiling information</h2>
<p>The <span class="c007">ocamlprof</span> command produces a source listing of the program modules
where execution counts have been inserted as comments. For instance,
</p><pre>        ocamlprof foo.ml
</pre><p>prints the source code for the <span class="c007">foo</span> module, with comments indicating
how many times the functions in this module have been called. Naturally,
this information is accurate only if the source file has not been modified
after it was compiled.</p><p>The following options are recognized by <span class="c007">ocamlprof</span>:</p><dl class="description"><dt class="dt-description"><span class="c019"><span class="c007">-f</span> <span class="c013">dumpfile</span></span></dt><dd class="dd-description">
Specifies an alternate dump file of profiling information to be read.</dd><dt class="dt-description"><span class="c019"><span class="c007">-F</span> <span class="c013">string</span></span></dt><dd class="dd-description">
Specifies an additional string to be output with profiling information.
By default, <span class="c007">ocamlprof</span> will annotate programs with comments of the form
<span class="c007">(* <span class="c013">n</span> *)</span> where <span class="c013">n</span> is the counter value for a profiling
point. With option <span class="c007">-F <span class="c013">s</span></span>, the annotation will be
<span class="c007">(* <span class="c013">sn</span> *)</span>.</dd><dt class="dt-description"><span class="c019"><span class="c007">-impl</span> <span class="c013">filename</span></span></dt><dd class="dd-description">
Process the file <span class="c013">filename</span> as an implementation file, even if its
extension is not <span class="c007">.ml</span>.</dd><dt class="dt-description"><span class="c019"><span class="c007">-intf</span> <span class="c013">filename</span></span></dt><dd class="dd-description">
Process the file <span class="c013">filename</span> as an interface file, even if its
extension is not <span class="c007">.mli</span>.</dd><dt class="dt-description"><span class="c010">-version</span></dt><dd class="dd-description">
Print version string and exit.</dd><dt class="dt-description"><span class="c010">-vnum</span></dt><dd class="dd-description">
Print short version number and exit.</dd><dt class="dt-description"><span class="c019"><span class="c007">-help</span> or <span class="c007">--help</span></span></dt><dd class="dd-description">
Display a short usage summary and exit.
</dd></dl>
<h2 class="section" id="sec368">4&nbsp;&nbsp;Time profiling</h2>
<p>Profiling with <span class="c007">ocamlprof</span> only records execution counts, not the actual
time spent within each function. There is currently no way to perform
time profiling on bytecode programs generated by <span class="c007">ocamlc</span>.</p><p>Native-code programs generated by <span class="c007">ocamlopt</span> can be profiled for time
and execution counts using the <span class="c007">-p</span> option and the standard Unix
profiler <span class="c007">gprof</span>. Just add the <span class="c007">-p</span> option when compiling and linking
the program:
</p><pre>        ocamlopt -o myprog -p <span class="c013">other-options files</span>
        ./myprog
        gprof myprog
</pre><p>
OCaml function names in the output of <span class="c007">gprof</span> have the following format:
</p><pre>        <span class="c013">Module-name</span>_<span class="c013">function-name</span>_<span class="c013">unique-number</span>
</pre><p>
Other functions shown are either parts of the OCaml run-time system or
external C functions linked with the program.</p><p>The output of <span class="c007">gprof</span> is described in the Unix manual page for
<span class="c007">gprof(1)</span>. It generally consists of two parts: a “flat” profile
showing the time spent in each function and the number of invocation
of each function, and a “hierarchical” profile based on the call
graph. Currently, only the Intel x86 ports of <span class="c007">ocamlopt</span> under
Linux, BSD and MacOS X support the two profiles. On other platforms,
<span class="c007">gprof</span> will report only the “flat” profile with just time
information. When reading the output of <span class="c007">gprof</span>, keep in mind that
the accumulated times computed by <span class="c007">gprof</span> are based on heuristics and
may not be exact.</p>
<h5 class="paragraph" id="sec369">Note</h5>
<p> The <span class="c007">ocamloptp</span> command also accepts the <span class="c007">-p</span>
option. In that case, both kinds of profiling are performed by the
program, and you can display the results with the <span class="c007">gprof</span> and <span class="c007">ocamlprof</span>
commands, respectively.

</p>
<hr>





<div class="copyright">The present documentation is copyright Institut National de Recherche en Informatique et en Automatique (INRIA). A complete version can be obtained from <a href="http://caml.inria.fr/pub/docs/manual-ocaml/">this page</a>.</div></div>